hphp/hack/test/typecheck/reactive/test_mutable_arg2.php.exp
File "test_mutable_arg2.php", line 18, characters 43-44:
Invalid argument (Typing[4215])
File "test_mutable_arg2.php", line 9, characters 55-57:
This parameter is marked mutable
File "test_mutable_arg2.php", line 18, characters 43-44:
But this expression is not
